[package]
name = "latticeclient"
version = "0.0.2"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
homepage = "https://wascc.dev"
repository = "https://github.com/wascc/latticectl"
description = "A command-line utility for interacting with a waSCC lattice"
license = "Apache-2.0"
documentation = "https://docs.rs/latticectl"
readme = "README.md"
keywords = ["webassembly", "wasm", "lattice", "wascc", "wapc"]
categories = ["wasm", "api-bindings","command-line-utilities"]


[dependencies]
structopt = "0.3.15"
nats = "0.7.1"
serde = { version = "1.0.114", features = ["derive"]}
wascc-codec = "0.7.2"
wascap = "0.5.0"
log = "0.4.11"
serde_json = "1.0.56"

[[bin]]
name = "latticectl"
path = "src/main.rs"