[package]
name = "latticeclient"
version = "0.4.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
homepage = "https://wascc.dev"
repository = "https://github.com/wascc/latticectl"
description = "A command-line utility for interacting with a waSCC lattice"
license = "Apache-2.0"
documentation = "https://docs.rs/latticectl"
readme = "README.md"
keywords = ["webassembly", "wasm", "lattice", "wascc", "mesh"]
categories = ["wasm", "api-bindings", "command-line-utilities"]


[dependencies]
structopt = "0.3.16"
nats = { git = "https://github.com/autodidaddict/nats.rs" }
serde = { version = "1.0.115", features = ["derive"] }
wascc-codec = "0.8.0"
wascap = "0.5.1"
log = "0.4.11"
serde_json = "1.0.57"
chrono = { version = "0.4.15", features = ["serde"] }
uuid = { version = "0.8.1", features = ["v4"] }
crossbeam-channel = "0.4.3"
crossbeam = "0.7.3"
crossbeam-utils = "^0.7.0"

[[bin]]
name = "latticectl"
path = "src/main.rs"